--- a/frontend/src/common/utils/i18n/resources/es/report.json
+++ b/frontend/src/common/utils/i18n/resources/es/report.json
@@ -48,6 +48,21 @@
     "filterAll": "Todos",
     "filterBookmarked": "Guardados",
     "noBookmarksTitle": "No Hay Informes Guardados",
-    "noBookmarksMessage": "Guarda informes como favoritos para encontrarlos rápidamente aquí"
+    "noBookmarksMessage": "Guarda informes como favoritos para encontrarlos rápidamente aquí",
+    "noMatchesTitle": "No Hay Informes Coincidentes",
+    "noMatchesMessage": "Ningún informe coincide con los filtros actuales. Intenta cambiar o eliminar los filtros.",
+    "clearFilters": "Eliminar Filtros",
+    "sortButton": "Ordenar informes",
+    "filterButton": "Filtrar informes"
+  },
+  "filter": {
+    "title": "Filtrar",
+    "category": "Categoría",
+    "apply": "Aplicar"
+  },
+  "category": {
+    "general": "General",
+    "heart": "Corazón",
+    "brain": "Cerebro"
   }
 }
