feat: Add no values icon and empty state message for normal values section

--- a/frontend/src/common/utils/i18n/resources/en/reportDetail.json
+++ b/frontend/src/common/utils/i18n/resources/en/reportDetail.json
@@ -66,7 +66,9 @@
       "title": "Flagged values"
     },
     "normal-values": {
-      "title": "Normal values"
+      "title": "Normal values",
+      "empty": "No values available.",
+      "empty-description": "No normal values within the normal range were detected."
     },
     "conclusion": {
       "title": "Conclusion"
