Add upload page title and improve modal handling

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -80,6 +80,9 @@
   "pages": {
     "chat": {
       "title": "AI Assistant"
+    },
+    "upload": {
+      "title": "Upload Report"
     }
   }
 }
