Add ReportMetadata interface and internationalize missing reference ranges message in reports
- Introduced ReportMetadata interface in frontend/src/common/models/medicalReport.ts to encapsulate metadata related to medical reports.
- Added internationalized message for missing reference ranges in English, Spanish, and French translation files.
- Updated AiAnalysisTab component to display a notice when reference ranges are missing.

--- a/frontend/src/common/utils/i18n/resources/es/report.json
+++ b/frontend/src/common/utils/i18n/resources/es/report.json
@@ -64,5 +64,8 @@
     "general": "General",
     "heart": "Corazón",
     "brain": "Cerebro"
+  },
+  "reports": {
+    "missingReferenceRanges": "Los rangos de referencia no estaban disponibles en este informe. El análisis puede ser limitado sin esta información. Por favor, consulte con su proveedor de atención médica para una interpretación completa."
   }
 }
