--- a/frontend/src/common/utils/i18n/resources/en/reportDetail.json
+++ b/frontend/src/common/utils/i18n/resources/en/reportDetail.json
@@ -89,5 +89,8 @@
       "ai-insights": "AI Insights",
       "original-report": "Original Report"
     }
+  },
+  "reports": {
+    "missingReferenceRanges": "Reference ranges were not available on this report. The analysis may be limited without this information. Please consult with your healthcare provider for a complete interpretation."
   }
 }
