add ConfirmationModal component and integrate it into ActionButtons for discard confirmation

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -73,10 +73,10 @@
   "loading": {
     "report": "Loading report..."
   },
-  "no": "no",
+  "no": "No",
   "updated": "updated",
   "welcome": "Welcome",
-  "yes": "yes",
+  "yes": "Yes",
   "pages": {
     "chat": {
       "title": "AI Assistant"
