--- a/frontend/src/common/utils/i18n/resources/es/common.json
+++ b/frontend/src/common/utils/i18n/resources/es/common.json
@@ -70,10 +70,10 @@
   "loading": {
     "report": "Cargando informe..."
   },
-  "no": "no",
+  "no": "No",
   "updated": "actualizado",
   "welcome": "Bienvenido",
-  "yes": "sí",
+  "yes": "Sí",
   "pages": {
     "chat": {
       "title": "Asistente IA"
