--- a/frontend/src/common/utils/i18n/resources/fr/common.json
+++ b/frontend/src/common/utils/i18n/resources/fr/common.json
@@ -70,10 +70,10 @@
   "loading": {
     "report": "Chargement du rapport..."
   },
-  "no": "non",
+  "no": "Non",
   "updated": "mis à jour",
   "welcome": "Bienvenu",
-  "yes": "oui",
+  "yes": "Oui",
   "pages": {
     "chat": {
       "title": "Assistant IA"
