Update empty state message and remove background color from empty section

--- a/frontend/src/common/utils/i18n/resources/en/reportDetail.json
+++ b/frontend/src/common/utils/i18n/resources/en/reportDetail.json
@@ -67,7 +67,7 @@
     },
     "normal-values": {
       "title": "Normal values",
-      "empty": "No values available.",
+      "empty": "No values to display",
       "empty-description": "No normal values within the normal range were detected."
     },
     "conclusion": {
