Create splash screen and modify sign in page

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -2,6 +2,13 @@
   "app": {
     "name": "MEDReport AI"
   },
+  "splash": {
+    "background-alt": "Application background",
+    "logo-alt": "MEDReport AI logo"
+  },
+  "signin": {
+    "logo-alt": "MEDReport AI logo"
+  },
   "confirm-prompt": "Are you sure?",
   "created": "created",
   "deleted": "deleted",
