--- a/frontend/src/common/utils/i18n/resources/fr/common.json
+++ b/frontend/src/common/utils/i18n/resources/fr/common.json
@@ -23,7 +23,9 @@
     "menu": "Menu",
     "signout": "Déconnecter",
     "users": "Utilisateurs",
-    "chat": "Assistant IA"
+    "chat": "Assistant IA",
+    "reports": "Rapports",
+    "upload": "Télécharger"
   },
   "reports": {
     "uploadDate": "Date de téléchargement"
