feat: add icon and update low/high labels in report and reportDetail translations

--- a/frontend/src/common/utils/i18n/resources/en/report.json
+++ b/frontend/src/common/utils/i18n/resources/en/report.json
@@ -54,7 +54,8 @@
     "clearFilters": "Clear Filters",
     "changeFilters": "Change Filters",
     "sortButton": "Sort reports",
-    "filterButton": "Filter reports"
+    "filterButton": "Filter reports",
+    "icon": "Report icon"
   },
   "filter": {
     "title": "Filter",
