--- a/frontend/src/common/utils/i18n/resources/es/reportDetail.json
+++ b/frontend/src/common/utils/i18n/resources/es/reportDetail.json
@@ -30,6 +30,8 @@
     "tabs": {
       "ai-insights": "Información de IA",
       "original-report": "Informe original"
-    }
+    },
+    "low": "Bajo",
+    "high": "Alto"
   }
 }
