--- a/frontend/src/common/utils/i18n/resources/fr/reportDetail.json
+++ b/frontend/src/common/utils/i18n/resources/fr/reportDetail.json
@@ -38,6 +38,8 @@
     "tabs": {
       "ai-insights": "Analyses IA",
       "original-report": "Rapport original"
-    }
+    },
+    "low": "Bas",
+    "high": "Élevé"
   }
 }
