Improving Sign Up

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -30,6 +30,7 @@
   "signin.title": "Log in",
   "signin.subtitle": "Login to access MedReport AI",
   "signup": "Sign Up",
+  "signup.button": "Create Account",
   "signout": "Sign Out",
   "loading": "Loading...",
   "signin.loading": "Signing in...",
