feat: enhance token management by extracting expiration from ID token and improving refresh logic

--- a/frontend/src/common/utils/i18n/resources/en/common.json
+++ b/frontend/src/common/utils/i18n/resources/en/common.json
@@ -53,6 +53,7 @@
     "uploadSuccessful": "Upload Successful",
     "fileReadyForProcessing": "Your file is ready for processing",
     "uploadFailed": "Upload Failed",
+    "secondsLeft": "seconds left",
     "error": {
       "noFile": "No file selected",
       "permissionDenied": "Permission denied",
