Small improvements to Sign Up page

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -20,7 +20,7 @@
     "password": "Password",
     "remember-me": "Remember me",
     "username": "Username",
-    "email": "Email Address",
+    "email": "Email",
     "first-name": "First Name",
     "last-name": "Last Name",
     "confirm-password": "Confirm Password",
