fix: standardize sign-in labels and adjust form layout for better accessibility

--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -26,8 +26,8 @@
     "confirm-password": "Confirm Password",
     "verification-code": "Verification Code"
   },
-  "signin": "Sign In",
-  "signin.title": "Log in",
+  "signin": "Log in",
+  "signin.title": "Log In",
   "signin.subtitle": "Login to access MedReport AI",
   "signup": "Sign Up",
   "signup.button": "Create Account",
