Small improvements to Sign Up page

--- a/frontend/src/common/utils/i18n/resources/es/auth.json
+++ b/frontend/src/common/utils/i18n/resources/es/auth.json
@@ -16,5 +16,10 @@
   },
   "signin": "Iniciar sesión",
   "signin.title": "Iniciar sesión",
-  "signin.subtitle": "Iniciar sesión para acceder a MEDReport AI"
+  "signin.subtitle": "Iniciar sesión para acceder a MEDReport AI",
+  "registration": {
+    "success": "¡Registro exitoso!",
+    "verify-email": "Por favor verifica tu correo electrónico para activar tu cuenta."
+  },
+  "please-fill-details": "Por favor complete sus datos personales"
 }
