--- a/frontend/src/common/utils/i18n/resources/fr/auth.json
+++ b/frontend/src/common/utils/i18n/resources/fr/auth.json
@@ -16,5 +16,10 @@
   },
   "signin": "Se connecter",
   "signin.title": "Se connecter",
-  "signin.subtitle": "Connectez-vous pour accéder à MEDReport AI"
+  "signin.subtitle": "Connectez-vous pour accéder à MEDReport AI",
+  "registration": {
+    "success": "Inscription réussie !",
+    "verify-email": "Veuillez vérifier votre e-mail pour activer votre compte."
+  },
+  "please-fill-details": "Veuillez remplir vos coordonnées personnelles"
 }
