--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -62,6 +62,10 @@
     "success": "Email verified successfully!",
     "code-resent": "A new verification code has been sent to your email."
   },
+  "registration": {
+    "success": "Registration successful!",
+    "verify-email": "Please verify your email to activate your account."
+  },
   "oauth": {
     "processing": "Processing your login...",
     "redirecting": "Redirecting...",
@@ -80,5 +84,6 @@
     "uppercase": "Must contain at least one uppercase letter",
     "number": "Must contain at least one number",
     "special-char": "Must contain at least one special character"
-  }
+  },
+  "please-fill-details": "Please fill in your personal details"
 }
