--- a/frontend/src/common/utils/i18n/resources/en/auth.json
+++ b/frontend/src/common/utils/i18n/resources/en/auth.json
@@ -41,7 +41,7 @@
   "or-signin-with": "Or sign in with",
   "submit": "Submit",
   "confirm": "Confirm",
-  "resend-code": "Resend Code",
+  "resend-code": "Request new code",
   "forgot-password": "Forgot Password?",
   "password-recovery": {
     "title": "Password Recovery",
@@ -62,6 +62,12 @@
     "success": "Email verified successfully!",
     "code-resent": "A new verification code has been sent to your email."
   },
+  "confirm-account": {
+    "title": "Confirm Account",
+    "message": "Please enter the verification code we sent to",
+    "submit": "Confirm Account"
+  },
+  "back-to-login": "Back to Log in",
   "registration": {
     "success": "Registration successful!",
     "verify-email": "Please verify your email to activate your account."
